--- a/style1.css
+++ b/style1.css
@@ -9,3 +9,10 @@
     grid-template-rows: 75px 75px;
     gap: 32px;
   }
+
+
+  .container {
+    display: grid;
+    grid-template-columns: 250px 50px 50px;
+    grid-template-rows: 50px 50px;
+  }
