--- a/style1.css
+++ b/style1.css
@@ -7,7 +7,7 @@
     display: grid;
     grid-template-columns: 75px 75px 75px;
     grid-template-rows: 75px 75px;
-    gap: 32px;
+    row-gap: 10px;
   }
 
 
